# SHE_Pipeline

./: .cproject  .gitignore  .gitlab-ci.yml  .jenkinsFile  .project  .pydevproject  CHANGELOG  CMakeLists.txt  README  README.md  elements.env  euclid_prs_app.cfg  prs_app.cfg  source_elements_env.sh
InstallArea/x86_64-co7-gcc48-o2g/SHE_Pipeline/: CMakeLists.txt
SHE_Pipeline/: CMakeLists.txt
SHE_Pipeline/auxdir/SHE_Pipeline/: PipelineDefSheProd_Wide_SC456.xml  SensitivityTestingNJCPlan1.fits  analysis_isf.txt  (+34 more)
SHE_Pipeline/python/: __init__.py
SHE_Pipeline/scripts/: call_combine_bias_measurements_ral.sh  call_measure_bias.sh  call_psf_sensitivity_testing_cambridge.sh  call_psf_sensitivity_testing_ral.sh  call_sensitivity_testing.sh  call_sensitivity_testing_cambridge.sh  call_sensitivity_testing_ral.sh  call_sensitivity_testing_sdc-uk.sh  cleanup_data.sh  clone_workdir.sh  create_listfiles  create_listfiles.py  create_val_listfiles.sh  dataProductRetrieval_SC8  dataProductRetrieval_SC8.py  get_all_mer_products.sh  get_all_phz_products.sh  get_all_she_products.sh  get_all_sim_products.sh  get_all_vis_products.sh  prepare_input_data.sh  rm_r  rm_r.py  run_analysis_pipeline.sh  run_bias_calibration_measurement_pipeline.sh  run_bias_measurement_pipeline.sh  run_manual_analysis_pipeline.sh  run_measure_bias.sh  run_measure_bias_calibration.sh  run_sensitivity_pipeline.sh  search_overlaps  search_overlaps.py  set_analysis_envvars.sh  set_analysis_envvars_sc3.sh  set_calibration_envvars.sh  set_pipeline_envvars.sh  sort_bias_calibration_measurements.sh  sort_bias_measurements.sh
doc/: dependencies.rst  doc_project.rst  guide_eas.rst  guide_running_pipelines.rst  guide_webdav.rst  guides.rst  installation.rst  overview.rst  programs.rst  scripts.rst  troubleshooting.rst
params/: analysis_isf.txt  sensitivity_isf.txt
pkgdef/: analysis_pipeline.py  calibration_pipeline.py  package_definition.py  sensitivity_pipeline.py
scripts/: cleanup_analysis_data.sh  prepare_analysis_input_data.sh  prepare_calibration_input_data.sh  prepare_input_data.sh  run_analysis_pipeline.sh  run_manual_analysis_pipeline.sh  run_manual_analysis_pipeline_sc3.sh  run_sensitivity_pipeline.sh  set_analysis_envvars.sh  set_analysis_envvars_sc3.sh
(+108 files in other folders)
